Attempt to fix userContainer at bottom not showing

--- a/src/app/_components/Header/Nav/index.module.scss
+++ b/src/app/_components/Header/Nav/index.module.scss
@@ -159,7 +159,7 @@
     align-items: flex-start;
     justify-content: center;
     flex-direction: column;
-    position: absolute;
+    position: fixed;
     bottom: 1rem;
     left: 0;
     gap: 0.5rem;
